[compiler] make it work (by opus4.6)